<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:text="@string/thongtindatve"
            android:textColor="#f21515" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:paddingTop="20dp"
            android:text="@string/xemthongtindatve"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_edTenKHDV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:editable="false"
                android:id="@+id/edTenKHDV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tenkhachdatve"
                android:textColor="@color/den" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_edsdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:editable="false"
                android:id="@+id/edsdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sdtlienhe"
                android:textColor="@color/den" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_edDiaChiEmailDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <EditText
                android:editable="false"
                android:id="@+id/edDiaChiEmailDK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hindemail"
                android:textColor="@color/den" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btnTiepTucNhapThongTin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/bgToolbar"
            android:padding="10dp"
            android:text="@string/tieptuc"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/chapnhandieukhoan" />


        </LinearLayout>



    </LinearLayout>
</LinearLayout>