<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:textColor="#ea1515"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/thongtindv"

        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotenkh"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_Ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tên"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sdt"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_Sdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sdt"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="email"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lotrinh"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_lotrinh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ten"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thoigian"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_thoigian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ten"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>
    <TextView
        android:textColor="#ea1515"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/cacvedachon"

        android:textSize="15sp" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_danhsachve"
        android:layout_width="match_parent"
        android:layout_height="150dp">

    </android.support.v7.widget.RecyclerView>
    <Button
        android:gravity="center"
        android:id="@+id/bt_tt_taiquay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#46bef5"
        android:text="Thanh Toán Tại Quầy"
        android:textColor="#ea1515" />

    <Button
        android:gravity="center"
        android:id="@+id/bt_tt_paypal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#46bef5"
        android:text="@string/thanhtoanquapaypal"
        android:textColor="#ea1515" />
</LinearLayout>