<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#faebfa"
    android:orientation="horizontal"
    android:padding="10dp"
    android:paddingRight="5dp"
    android:weightSum="1">

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="61dp"
        android:layout_height="match_parent"
        android:src="@drawable/xeicon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="0.40"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDiemDi1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diemdi"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@drawable/muiten"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/tvDiemDen1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diemden"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView

                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tentuyen" />


            <TextView
                android:id="@+id/tvTENLOTRINH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="Sài Gòn-Cần Thơ" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView

                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sotramdung" />


            <TextView
                android:id="@+id/tvSOTRAMDUNG1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="2" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/ngay" />
            <TextView
                android:id="@+id/tvNgay"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="8/4/2017"
                android:textSize="14sp" />
            <TextView

                android:layout_width="15dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:background="@drawable/muiten1"
                android:paddingLeft="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/giokhoihanh" />

            <TextView
                android:id="@+id/tvThoiGian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="8h" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tvGia1"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="200000"
                    android:textColor="#f51717"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:text="@string/dongtrenve" />
            </LinearLayout>
            <Button
                android:id="@+id/btnTienHanhDatVe"
                android:layout_width="wrap_content"

                android:layout_height="20dp"
                android:layout_gravity="right"
                android:layout_weight="0.40"
                android:background="@drawable/gbbt"
                android:gravity="center"
                android:text="@string/tienhanhdatve"
                android:textColor="#e22020"
                android:textSize="10dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>