<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_gioi_thieu_fun_bus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
      >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="113dp"
    android:layout_margin="10dp"
    android:background="@drawable/funbus" />
 <TextView

     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="10dp"
     android:text="@string/chatluongtaothanhcong"
     android:textColor="#f90c0c"
     android:textStyle="bold" />


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:drawableLeft="@drawable/mt"
    android:gravity="center"
    android:text="@string/gioithieu"
    android:textColor="#f90c0c"
    android:textStyle="bold" />

<TextView
    android:id="@+id/tvGThieu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/eye"
                android:gravity="center"
                android:text="@string/tamnhin"
                android:textColor="#f90c0c"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTamNHin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/muctieu"
                android:gravity="center"
                android:text="@string/muctieu"
                android:textColor="#f90c0c"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMucTieu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
